fluent-syntax/test/fixtures_behavior/standalone-identifier.ftl
foo
//~ ERROR E0005, pos 3, args "{"type":"Identifier","name":"foo"}" 
